<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToastPage">

    <Button
        android:id="@+id/bStoast"
        android:layout_width="241dp"
        android:layout_height="69dp"
        android:backgroundTint="#9C9494"
        android:fontFamily="sans-serif-black"
        android:text="@string/short_length_toast"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/bLtoast"
        android:layout_width="241dp"
        android:layout_height="69dp"
        android:backgroundTint="#9C9494"
        android:fontFamily="sans-serif-black"
        android:text="@string/long_length_toast"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/bCtoast"
        android:layout_width="241dp"
        android:layout_height="69dp"
        android:backgroundTint="#9C9494"
        android:fontFamily="sans-serif-black"
        android:text="@string/custom_toast"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />


</androidx.constraintlayout.widget.ConstraintLayout>